// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Execute onItemActivation callback when an item is expanded 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox light"
                  >
                    <input
                      type="checkbox"
                      value=""
                    />
                    <span />
                  </span>
                </label>
              </div>
              Title
            </div>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="2"
                    />
                    <span />
                  </span>
                </label>
              </div>
              Test1
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="3"
                    />
                    <span />
                  </span>
                </label>
              </div>
              <span
                class="toggleIcon"
              >
                <span
                  aria-label="su-angle-right"
                  class="su-angle-right"
                />
              </span>
              Test2
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="6"
                    />
                    <span />
                  </span>
                </label>
              </div>
              <span
                class="toggleIcon"
              >
                <span
                  aria-label="su-angle-down"
                  class="su-angle-down"
                />
              </span>
              Test3
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
              style="padding-left: 25px;"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="7"
                    />
                    <span />
                  </span>
                </label>
              </div>
              Test3.1
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
              style="padding-left: 25px;"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="8"
                    />
                    <span />
                  </span>
                </label>
              </div>
              Test3.2
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Execute onItemActivation callback when an item is expanded 2`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox light"
                  >
                    <input
                      type="checkbox"
                      value=""
                    />
                    <span />
                  </span>
                </label>
              </div>
              Title
            </div>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="2"
                    />
                    <span />
                  </span>
                </label>
              </div>
              Test1
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="3"
                    />
                    <span />
                  </span>
                </label>
              </div>
              <span
                class="toggleIcon"
              >
                <span
                  aria-label="su-angle-right"
                  class="su-angle-right"
                />
              </span>
              Test2
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="6"
                    />
                    <span />
                  </span>
                </label>
              </div>
              <span
                class="toggleIcon"
              >
                <span
                  aria-label="su-angle-right"
                  class="su-angle-right"
                />
              </span>
              Test3
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render data with pencil button when onItemEdit callback is passed 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerButtonCell headerCell"
        >
          <span>
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox light"
                  >
                    <input
                      type="checkbox"
                    />
                    <span />
                  </span>
                </label>
              </div>
              Description
            </div>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="buttonCell cell"
        >
          <div
            class="cellContent"
          >
            <button>
              <span
                aria-label="su-pen"
                class="su-pen"
              />
            </button>
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="2"
                    />
                    <span />
                  </span>
                </label>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render data with plus button when onItemEdit callback is passed 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerButtonCell headerCell"
        >
          <span>
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox light"
                  >
                    <input
                      type="checkbox"
                    />
                    <span />
                  </span>
                </label>
              </div>
              Description
            </div>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="buttonCell cell"
        >
          <div
            class="cellContent"
          >
            <button>
              <span
                aria-label="su-pen"
                class="su-pen"
              />
            </button>
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="2"
                    />
                    <span />
                  </span>
                </label>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render data with plus button when onItemEdit callback is passed 2`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerButtonCell headerCell"
        >
          <span>
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox light"
                  >
                    <input
                      type="checkbox"
                    />
                    <span />
                  </span>
                </label>
              </div>
              Description
            </div>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="buttonCell cell"
        >
          <div
            class="cellContent"
          >
            <button>
              <span
                aria-label="su-pen"
                class="su-pen"
              />
            </button>
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="2"
                    />
                    <span />
                  </span>
                </label>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render data with schema 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox light"
                  >
                    <input
                      type="checkbox"
                    />
                    <span />
                  </span>
                </label>
              </div>
              Title
            </div>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="2"
                    />
                    <span />
                  </span>
                </label>
              </div>
              Test1
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="3"
                    />
                    <span />
                  </span>
                </label>
              </div>
              <span
                class="toggleIcon"
              >
                <span
                  aria-label="su-angle-right"
                  class="su-angle-right"
                />
              </span>
              Test2
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="6"
                    />
                    <span />
                  </span>
                </label>
              </div>
              <span
                class="toggleIcon"
              >
                <span
                  aria-label="su-angle-right"
                  class="su-angle-right"
                />
              </span>
              Test3
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render data with schema and selections 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox light"
                  >
                    <input
                      type="checkbox"
                    />
                    <span />
                  </span>
                </label>
              </div>
              Title
            </div>
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="2"
                    />
                    <span />
                  </span>
                </label>
              </div>
              Test1
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      checked=""
                      type="checkbox"
                      value="3"
                    />
                    <span>
                      <span
                        aria-label="su-check"
                        class="su-check"
                      />
                    </span>
                  </span>
                </label>
              </div>
              <span
                class="toggleIcon"
              >
                <span
                  aria-label="su-angle-right"
                  class="su-angle-right"
                />
              </span>
              Test2
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="6"
                    />
                    <span />
                  </span>
                </label>
              </div>
              <span
                class="toggleIcon"
              >
                <span
                  aria-label="su-angle-right"
                  class="su-angle-right"
                />
              </span>
              Test3
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render data with two columns 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell"
        >
          <span>
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox light"
                  >
                    <input
                      type="checkbox"
                    />
                    <span />
                  </span>
                </label>
              </div>
              Title
            </div>
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Title2
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="2"
                    />
                    <span />
                  </span>
                </label>
              </div>
              Test1
            </div>
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Title2 - Test1
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="3"
                    />
                    <span />
                  </span>
                </label>
              </div>
              <span
                class="toggleIcon"
              >
                <span
                  aria-label="su-angle-right"
                  class="su-angle-right"
                />
              </span>
              Test2
            </div>
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Title2 - Test2
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <div
              class="cellContent"
            >
              <div
                class="cellSelect"
              >
                <label
                  class="label"
                >
                  <span
                    class="switch checkbox dark"
                  >
                    <input
                      type="checkbox"
                      value="6"
                    />
                    <span />
                  </span>
                </label>
              </div>
              <span
                class="toggleIcon"
              >
                <span
                  aria-label="su-angle-right"
                  class="su-angle-right"
                />
              </span>
              Test3
            </div>
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Title2 - Test3
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
